<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/color1"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edit_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_go_generate"
            android:layout_below="@+id/edit_input"
            android:background="@drawable/btn_style_result"
            android:text="@string/generate"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_type_generate"
            android:layout_below="@+id/edit_input"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn_style_result"
            android:text="@string/type_generate"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/img_qr_code"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/btn_go_generate"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <Button
            android:id="@+id/btn_save"
            android:visibility="invisible"
            android:layout_below="@id/img_qr_code"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/save"
            android:textColor="#fff"
            android:background="@drawable/btn_style_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>



</ScrollView>