<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:background="@color/color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:layout_centerInParent="true"
                    android:text="@string/tel"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <LinearLayout
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10">
                <TextView
                    android:text="Phone Number"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"/>
                <EditText
                    android:id="@+id/edit_tel_number"
                    android:inputType="number"
                    android:textColor="@color/colorAccent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7.5"/>
            </LinearLayout>


            <LinearLayout
                android:background="@color/color3"
                android:layout_marginTop="60dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="10">

                <TextView
                    android:id="@+id/text_dialog_generate_tel"
                    android:text="@string/generate"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"/>
                <TextView
                    android:background="@color/color1"
                    android:layout_width="1px"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/text_dialog_cancel_tel"
                    android:text="@string/cancel"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"/>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>